--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,15 @@ dependencies = [
     "kfp==2.11.0",
     "kfp-kubernetes>=1.4.0",
 ]
+
+[tool.flake8]
+max-line-length = 99
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 99
+profile = "black"
