--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Set version from run number
         id: version
         run: |
-          echo "tag=v1.0.${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
+          echo "tag=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Build and push ${{ matrix.name }}
         uses: docker/build-push-action@v5
@@ -42,6 +42,6 @@ jobs:
           context: ${{ matrix.context }}
           file: Containerfile
           push: true
-          tags: quay.io/rh-ai-kickstart/${{ matrix.image-name }}:${{ steps.version.outputs.tag }}
+          tags: quay.io/ecosystem-appeng/${{ matrix.image-name }}:${{ steps.version.outputs.tag }}
           build-args: |
             IMAGE_TAG=${{ steps.version.outputs.tag }}
